<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShoppingWithFriends</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Shopping With Friends App!! Please Login or Register.</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="user_name">Your name: </string>
    <string name="user_id">Your ID: </string>
    <string name="user_password">Your Password: </string>
    <string name="user_password_confirmation">Verify password: </string>
    <string name="registration_string">Registration </string>
    <string name="logout_string">Logout </string>
    <string name="cancel_string">Cancel </string>
    <string name="friends_string">Friends </string>
    <string name="friends_add_string">Add Friend </string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="friends_name">Friend\'s name: </string>
    <string name="friends_email">Friend\'s email: </string>
    <string name="title_activity_friends_list">FriendsListActivity</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="title_activity_friend_info">FriendInfoActivity</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="title_activity_item_info">ItemInfoActivity</string>
    <string name="title_activity_requested_items">RequestedItemsActivity</string>
    <string name="title_activity_friend_item_info">FriendItemInfoActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_available_items">AvailableItemsActivity</string>
    <string name="title_activity_available_item_info">AvailableItemInfoActivity</string>
    <string name="add_item_string">Add Item </string>
    <string name="item_string">Item: </string>
    <string name="price_string">Price: </string>
    <string name="price_limit_string">Price Limit: </string>
    <string name="name_string">Name: </string>
    <string name="email_string">Email: </string>
    <string name="location_string">Location: </string>
    <string name="rating_string">Rating: </string>
    <string name="number_of_report_string">Number of Reports: </string>

    <string name="report_string">Report</string>
    <string name="available_items_string">Available Items</string>
    <string name="submit_string">Submit</string>
    <string name="delete_item_string">Delete Item</string>
    <string name="requests_string">Requests</string>
    <string name="home_string">Home</string>
    <string name="price_limit_here_string">Price Limit here!</string>
    <string name="location_here_string">Location here!</string>




    <string name="your_id_here_string">Your ID here!</string>
    <string name="items_string">Items</string>
    <string name="your_password_here_string">Your Password here!</string>
    <string name="item_name_here_string">Item name here!</string>
    <string name="view_on_map_string">View on Map</string>








</resources>
