<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jaekyuoh.shoppingwithfriends.AddItemActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item_string"
        android:id="@+id/textView15"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/price_limit_string"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/location_string"
        android:id="@+id/textView17"
        android:layout_below="@+id/price_threshold_editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_name_editText"
        android:hint="@string/item_name_here_string"
        android:layout_alignTop="@+id/textView15"
        android:layout_toRightOf="@+id/textView15"
        android:layout_toEndOf="@+id/textView15" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price_threshold_editText"
        android:hint="@string/price_limit_here_string"
        android:layout_alignTop="@+id/textView16"
        android:layout_toRightOf="@+id/textView16"
        android:layout_toEndOf="@+id/textView16" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location_editText"
        android:hint="@string/location_here_string"
        android:layout_alignTop="@+id/textView17"
        android:layout_toRightOf="@+id/textView17"
        android:layout_toEndOf="@+id/textView17" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_string"
        android:id="@+id/submit_item_button"
        android:onClick="onClick_submitItemButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_string"
        android:id="@+id/go_back_to_home_button"
        android:onClick="onClick_cancelItemButton"
        android:layout_alignTop="@+id/submit_item_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
