<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jaekyuoh.shoppingwithfriends.HomepageActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_string"
        android:id="@+id/logout_button"
        android:onClick="onClick_LogoutButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_string"
        android:id="@+id/to_friend_button"
        android:onClick="onClick_toFriendButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:layout_alignRight="@+id/logout_button"
        android:layout_alignEnd="@+id/logout_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items_string"
        android:id="@+id/item_button"
        android:onClick="onClick_toItemButton"
        android:layout_below="@+id/to_friend_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:layout_alignRight="@+id/to_friend_button"
        android:layout_alignEnd="@+id/to_friend_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_string"
        android:id="@+id/report_button"
        android:onClick="onClick_toReportButton"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_items_string"
        android:id="@+id/available_button"
        android:onClick="onClick_toAvailableItemsButton"
        android:layout_below="@+id/report_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:layout_alignRight="@+id/report_button"
        android:layout_alignEnd="@+id/report_button" />
</RelativeLayout>
