<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jaekyuoh.shoppingwithfriends.ItemInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item_string"
        android:id="@+id/textView19"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/item_name_text"
        android:layout_alignBottom="@+id/textView19"
        android:layout_toRightOf="@+id/textView19"
        android:layout_toEndOf="@+id/textView19" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/price_limit_string"
        android:id="@+id/textView20"
        android:layout_below="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/price_threshold_text"
        android:layout_alignBottom="@+id/textView20"
        android:layout_toRightOf="@+id/textView20"
        android:layout_toEndOf="@+id/textView20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/location_string"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/viewMapButton"
        android:text="@string/view_on_map_string"
        android:textColor="#0088CC"
        android:layout_below="@id/textView21"
        android:layout_alignParentLeft="true"
        android:onClick="showMap"
        style="?android:attr/borderlessButtonStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/location_text"
        android:layout_alignBottom="@+id/textView21"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_string"
        android:id="@+id/back_to_Items_button"
        android:onClick="onClick_goBackToItemsButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_item_string"
        android:id="@+id/delete_item_button"
        android:onClick="onClick_deleteItemButton"
        android:layout_alignTop="@+id/back_to_Items_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
