<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jaekyuoh.shoppingwithfriends.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:layout_below="@+id/textView8"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_id"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/user_name"
        android:layout_alignEnd="@+id/user_name"
        android:layout_toRightOf="@+id/to_home_button"
        android:layout_toEndOf="@+id/to_home_button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_password"
        android:inputType="textPassword"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/email_editText"
        android:layout_toRightOf="@+id/textView6"
        android:layout_alignRight="@+id/user_password_confirmation"
        android:layout_alignEnd="@+id/user_password_confirmation" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/user_password_confirmation"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/user_password"
        android:layout_toRightOf="@+id/textView7"
        android:layout_alignRight="@+id/user_id"
        android:layout_alignEnd="@+id/user_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_name"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/user_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_id"
        android:id="@+id/textView5"
        android:textSize="20sp"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/email_editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_password"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:layout_alignTop="@+id/user_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_password_confirmation"
        android:id="@+id/textView7"
        android:textSize="20sp"
        android:layout_alignTop="@+id/user_password_confirmation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registration_string"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="40sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_string"
        android:id="@+id/textView18"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_string"
        android:id="@+id/register_button"
        android:onClick="onClick_registerButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/user_password"
        android:layout_alignEnd="@+id/user_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_string"
        android:id="@+id/to_home_button"
        android:onClick="onClick_toHomeButton"
        android:layout_alignBottom="@+id/register_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email_editText"
        android:layout_alignBottom="@+id/textView18"
        android:layout_toRightOf="@+id/textView18"
        android:layout_alignRight="@+id/user_password"
        android:layout_alignEnd="@+id/user_password" />




</RelativeLayout>
