<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jaekyuoh.shoppingwithfriends.ReportActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/item_string"
        android:id="@+id/reportItemNameText"
        android:layout_alignBottom="@+id/reportItemName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/price_string"
        android:id="@+id/reportPriceText"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/reportItemNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location_string"
        android:id="@+id/reportLocationText"
        android:layout_below="@+id/reportPriceText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reportItemName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/reportItemNameText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reportPrice"
        android:layout_above="@+id/reportLocationText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/reportPriceText"
        android:layout_toEndOf="@+id/reportPriceText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reportLocation"
        android:layout_alignBottom="@+id/reportLocationText"
        android:layout_toRightOf="@+id/reportLocationText"
        android:layout_alignRight="@+id/reportPrice"
        android:layout_alignEnd="@+id/reportPrice" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_string"
        android:id="@+id/add_report_button"
        android:onClick="onClick_addReportButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_string"
        android:id="@+id/cancel_report_button"
        android:onClick="onClick_toHomepageFromReportButton"
        android:layout_alignTop="@+id/add_report_button"
        android:layout_alignRight="@+id/reportLocation"
        android:layout_alignEnd="@+id/reportLocation" />
</RelativeLayout>
