<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jaekyuoh.shoppingwithfriends.AvailableItemInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item_string"
        android:id="@+id/availItemName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/price_string"
        android:id="@+id/availItemPrice"
        android:layout_above="@+id/textView25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/location_string"
        android:id="@+id/textView25"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/viewMapButton"
        android:text="@string/view_on_map_string"
        android:textColor="#0088CC"
        android:layout_below="@id/textView25"
        android:layout_alignParentLeft="true"
        android:onClick="showOnMap"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_string"
        android:id="@+id/button"
        android:onClick="onClick_goBackToAvailableItemsButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/availItemNameTextView"
        android:layout_alignTop="@+id/availItemName"
        android:layout_toRightOf="@+id/availItemPrice"
        android:layout_toEndOf="@+id/availItemPrice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/availItemPriceTextView"
        android:layout_alignTop="@+id/availItemPrice"
        android:layout_alignLeft="@+id/availItemNameTextView"
        android:layout_alignStart="@+id/availItemNameTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/availItemLocationTextView"
        android:layout_alignTop="@+id/textView25"
        android:layout_toRightOf="@+id/textView25"
        android:layout_toEndOf="@+id/textView25" />
</RelativeLayout>
